Added website logo and favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="index.css">
         <link href="https://fonts.cdnfonts.com/css/cursed-timer-ulil" rel="stylesheet">
         <title>BasketBall Score Counter</title>
+        <link rel="icon" href="favicon.png" type="image/png">
     </head>
     <body>
         <div class="main">
